modify swagger.yaml
